// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders html content in markdown 1`] = `
<div
  class="theme"
>
  <h1>
    Heading 1
  </h1>
  <h3>
    Heading 3
  </h3>
  <table>
    
  
    <tbody>
      
    
      <tr>
        
    
      </tr>
      
    
      <tr>
        <td>
          Cool
        </td>
        
  
      </tr>
    </tbody>
    

  </table>
  <table />
</div>
`;

exports[`renders standard Markdown 1`] = `
<div
  class="theme"
>
  <h1>
    Heading 1
  </h1>
  <h3>
    Heading 3
  </h3>
  <pre>
    <code>
      const jsCode = () =&gt; {
  console.log('hello world);
}
    </code>
  </pre>
</div>
`;
